# ODEVisualization

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  README.md  ToDo.md  pyproject.toml  setup.py  sonar-project.properties  test_cmake.py
examples/LorentzAttractor/: CMakeLists.txt
examples/LorentzAttractor/flow_equations/lorentz_attractor/: lorentz_attractor_jacobian_equation.hpp
examples/LorentzAttractor/include/: config.h.in  dev_dat_t.hpp  evaluate_t.hpp  evolution_t.hpp  fixed_point_search_t.hpp  flow_equations_t.hpp  flow_observer_t.hpp  full_example.hpp  jacobians_t.hpp  partial_ranges_t.hpp  separatrizes_t.hpp
examples/LorentzAttractor/src/: dev_dat_t.cu  evaluate_t.cu  fixed_point_search_t.cu  flow_equations_t.cu  flow_observer_t.cu  full_example.cu  main.cpp  separatrizes_t.cu
examples/ThreePointSystem/: CMakeLists.txt
examples/ThreePointSystem/include/: fixed_point_search_t.hpp
examples/ThreePointSystem/src/: fixed_point_search_t.cu  main.cpp
examples/applications/c++/: CMakeLists.txt
examples/applications/c++/include/: dev_dat_t.hpp  evolution_t.hpp  fixed_point_search_t.hpp  flow_equations_t.hpp  flow_observer_t.hpp  jacobians_t.hpp  partial_ranges_t.hpp  separatrizes_t.hpp
examples/applications/c++/src/: dev_dat_t.cu  evolution_t.cu  fixed_point_search_t.cu  flow_observer_t.cu  main.cpp  separatrizes_t.cu
examples/flow_equations/LorentzAttractor/: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/flow_equations/LorentzAttractor/python_pybind/: CMakeLists.txt  lorentz_attractor.py  lorentz_attractor_python.cu
examples/flow_equations/LorentzAttractor/src/: CMakeLists.txt  lorentz_attractor_flow_equation.cu  lorentz_attractor_jacobian_equation.cu
examples/flow_equations/NonlinearSystem/python_pybind/: CMakeLists.txt  nonlinear_system.py  nonlinear_system_python.cu
examples/flow_equations/NonlinearSystem/src/: CMakeLists.txt  nonlinear_system_flow_equation.cu  nonlinear_system_jacobian_equation.cu
examples/flow_equations/ThreePointSystem/: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/flow_equations/ThreePointSystem/cmake/: threepointsystemConfig.cmake.in
examples/flow_equations/ThreePointSystem/python_pybind/: CMakeLists.txt  three_point_system.py  (+1 more)
examples/further_systems/FourPointSystem/: CMakeLists.txt
examples/further_systems/ThreePointSystem/: CMakeLists.txt
odevis/: CMakeLists.txt  MANIFEST.in  environment.yml
odevis/cmake/: odevisualizationConfig.cmake.in
odevis/doc/: conf.py  index.rst
odevis/doc/source/: references.bib  report.tex
odevis/python/: CMakeLists.txt
odevis/python/flow_equation_wrapper/: README.md  cookiecutter.json
odevis/python/include/: evolution_python.hpp  modes_python.hpp
odevis/python/odesolver/: cube_index_path.py  jacobians.py  kmeans_clustering.py  recursive_search.py
odevis/python/src/: modes_python.cu  odevisualization_python.cu
odevis/src/: CMakeLists.txt
odevis/src/collection/: collection.cpp  collection_expander.cu
odevis/src/evolution/: evolution_observer.cu
odevis/src/grid_computation/: grid_computation_wrapper.cu
odevis/src/modes/: evolution.cu  jacobians.cpp  jacobians.cu  kmeans_clustering.cu  mesh.cu
odevis/src/recursive_search/: dynamic_recursive_grid_computation.cu  fixed_point_criterion.cu
odevis/src/util/: kmeans.cpp  monitor.cu
odevis/tests/: CMakeLists.txt  hypercubes_t.cu
odevis/tests/util/: dev_dat_t.cpp
python/: CMakeLists.txt  coordinates.py  evolution.py  fixed_point_criterion.py  flow_equations.py  gen_ode_system.py  jacobians.py  kmeans_clustering.py  mesh.py  odevisualisationlib_python.cu  odevisualization_python.cu  recursive_fixed_point_search.py  recursive_search.py  vfcoor.py
python/flow_equation_wrapper/: COPYING.md
python/flow_equation_wrapper/hooks/: post_gen_project.py
python/flow_equation_wrapper/{{ cookiecutter.project_slug.replace("-", " ").title().replace(" ", "") }}/: CMakeLists.txt  README.md  setup.py
python/include/: dev_dat_python.hpp  flow_equations_python.hpp  modes_python.hpp  odevisualization_python.hpp  recursive_search_python.hpp
python/src/: dev_dat_python.cu  evolution_python.cu  flow_equations_python.cu  modes_python.cu  recursive_search_python.cu
src/: CMakeLists.txt  coordinate_operator.cu  dev_dat.cu  executer.cu  fixed_point_search.cu  main.cu  old_code.cu  visualization.cu
src/boost/: dev_dat_boost_integration.cu
src/collection/: buffer.cpp  collection_expander.cu  leaf.cpp
src/eigen/: jacobians.cpp
src/evolution/: conditional_intersection_observer.cu  conditional_range_observer.cu  evolution_observer.cu  stepper.cu  tracking_observer.cu
src/flow_equation_interface/: flow_equation.cu  flow_equation_system.cu  jacobian_equation.cu
src/flow_equations/: flow_equation.cu  jacobian_equation.cu
src/grid_computation/: dynamic_recursive_grid_computation.cu  grid_computation.cu  grid_computation_wrapper.cu  static_recursive_grid_computation.cu
src/hypercubes/: buffer.cu  dynamic_recursive_grid_computation.cu  gridcomputationwrapper.cu  hypercubes.cu  nodesexpander.cu  static_recursive_grid_computation.cu
src/modes/: coordinate_operator.cu  evolution.cu  fixed_point_criterion.cu  fixed_point_search.cu  fixed_point_search_old.cu  jacobians.cpp  jacobians.cu  kmeans_clustering.cu  mesh.cu  recursive_search.cu  separatrizes.cu  visualization.cu
src/observers/: conditional_intersection_observer.cu  conditional_range_observer.cu  evolution.cu
src/recursive_search/: dynamic_recursive_grid_computation.cu  fixed_point_criterion.cu  static_recursive_grid_computation.cu
src/util/: dev_dat.cu  dev_dat_boost_integration.cu  helper_functions.cu  jacobians.cpp  json_conversion.cpp  kmeans.cpp  kmeans_clustering.cu  lambda_range_generator.cpp  lambda_range_generator.cu  monitor.cu  partial_ranges.cpp  python_integration.cpp  random.cu
test_programs/thrust_cuda/: CMakeLists.txt  dev_dat.hpp  header.hpp  helper.cu  helper.hpp  thrust_cuda_test.cu
tests/: CMakeLists.txt  hypercubes.cu  recursive_grid_computation_t.cu
tests/util/: dev_dat_t.cpp
(+282 files in other folders)
